# CameraPractice5

./: build.gradle  settings.gradle
OpenCV/: Imshow.java  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/camerapractice5/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camerapractice5.cpp
app/src/main/java/com/example/camerapractice5/: ImageUtil.java  MainActivity.java
app/src/main/res/drawable/: focus_rectangle.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/camerapractice5/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
